# financial-pdf-scraper

./: README.md  pyproject.toml
scripts/: scrap_jqfr.py
src/financial_pdf_scraper/: pdf.py  sentence_segmentation.py
