[project]
name = "financial-pdf-scraper"
version = "0.1.0"
description = "Python Virtual Environment for Financial PDF Scraper"
authors = [{ name = "Kazumasa Omura", email = "omukazu5313@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pdfminer-six<=20250327",
    "reportlab>=4.2.5,<5.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/financial_pdf_scraper"]

[tool.hatch.build.targets.wheel]
include = ["src/financial_pdf_scraper"]

[tool.hatch.build.targets.wheel.sources]
"src/financial_pdf_scraper" = "financial_pdf_scraper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
]
ignore = [
    "E203",  # whitespace before ":"
    "E501",  # line-too-long
    # Ruff doesn't enable pycodestyle warnings (W)
    # "W503",  # line break occurred before a binary operator
]

[tool.ruff.lint.isort]
known-first-party = ["financial_pdf_scraper"]
